Add assertions to tests, clean up code

--- a/src/test/resources/invalidFiles/sassTestfileInvalid.css
+++ b/src/test/resources/invalidFiles/sassTestfileInvalid.css
@@ -8,7 +8,7 @@ com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-mav
 	at com.cathive.sass.SassContext.compile(SassContext.java:72)
 	at org.jago.sassymaven.compiler.SassCompiler.compileSingleFile(SassCompiler.java:54)
 	at org.jago.sassymaven.compiler.SassCompiler.compile(SassCompiler.java:27)
-	at org.jago.sassymaven.compiler.SassCompilerTest.testSassCompilerSyntaxErrorInOneFile(SassCompilerTest.java:24)
+	at org.jago.sassymaven.compiler.SassCompilerTest.testSassCompilerSyntaxErrorInOneFile(SassCompilerTest.java:53)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -27,6 +27,7 @@ com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-mav
 	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:288)
 	at org.junit.runners.ParentRunner.access$000(ParentRunner.java:58)
 	at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:268)
+	at org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:26)
 	at org.junit.runners.ParentRunner.run(ParentRunner.java:363)
 	at org.eclipse.jdt.internal.junit4.runner.JUnit4TestReference.run(JUnit4TestReference.java:86)
 	at org.eclipse.jdt.internal.junit.runner.TestExecution.run(TestExecution.java:38)
