--- a/src/test/resources/unittest/invalidFiles/sassTestfileInvalid.css
+++ b/src/test/resources/unittest/invalidFiles/sassTestfileInvalid.css
@@ -1,18 +1,18 @@
-com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-maven/src/test/resources/invalidFiles/sassTestfileInvalid.scss:1:10] Error: invalid property name
-        on line 1 of src/test/resources/invalidFiles/sassTestfileInvalid.scss
+com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-maven/src/test/resources/unittest/invalidFiles/sassTestfileInvalid.scss:1:10] Error: invalid property name
+        on line 1 of src/test/resources/unittest/invalidFiles/sassTestfileInvalid.scss
 >> #greatId {
    ---------^
 
 	at com.cathive.sass.SassContext.throwCompilationException(SassContext.java:137)
 	at com.cathive.sass.SassContext.compile(SassContext.java:94)
 	at com.cathive.sass.SassContext.compile(SassContext.java:72)
-	at org.jago.sassymaven.compiler.SassCompiler.compileSingleFile(SassCompiler.java:54)
-	at org.jago.sassymaven.compiler.SassCompiler.compile(SassCompiler.java:27)
-	at org.jago.sassymaven.compiler.SassCompilerTest.testSassCompilerSyntaxErrorInOneFile(SassCompilerTest.java:53)
+	at org.jago.sassymaven.compiler.SassCompiler.compileSingleFile(SassCompiler.java:60)
+	at org.jago.sassymaven.compiler.SassCompiler.compile(SassCompiler.java:33)
+	at org.jago.sassymaven.compiler.SassCompilerTest.testSassCompilerSyntaxErrorInOneFile(SassCompilerTest.java:52)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
+	at java.lang.reflect.Method.invoke(Unknown Source)
 	at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:50)
 	at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
 	at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:47)
