--- a/src/test/resources/invalidFiles/sassTestfileInvalid.css
+++ b/src/test/resources/invalidFiles/sassTestfileInvalid.css
@@ -1,4 +1,4 @@
-com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-maven/src/test/resources/invalidFiles/sassTestfileInvalid.scss:1:10] Error: invalid property name
+com.cathive.sass.SassCompilationException: [/Users/beck/Documents/Projekte/Programmierung/sassy-maven/src/test/resources/invalidFiles/sassTestfileInvalid.scss:1:10] Error: invalid property name
         on line 1 of src/test/resources/invalidFiles/sassTestfileInvalid.scss
 >> #greatId {
    ---------^
@@ -8,11 +8,11 @@ com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-mav
 	at com.cathive.sass.SassContext.compile(SassContext.java:72)
 	at org.jago.sassymaven.compiler.SassCompiler.compileSingleFile(SassCompiler.java:54)
 	at org.jago.sassymaven.compiler.SassCompiler.compile(SassCompiler.java:27)
-	at org.jago.sassymaven.compiler.SassCompilerTest.testSassCompilerSyntaxErrorInOneFile(SassCompilerTest.java:53)
+	at org.jago.sassymaven.compiler.SassCompilerTest.testSassCompilerSyntaxErrorInOneFile(SassCompilerTest.java:51)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
+	at java.lang.reflect.Method.invoke(Method.java:483)
 	at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:50)
 	at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
 	at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:47)
@@ -29,9 +29,15 @@ com.cathive.sass.SassCompilationException: [C:/Users/Claudia/workspace/sassy-mav
 	at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:268)
 	at org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:26)
 	at org.junit.runners.ParentRunner.run(ParentRunner.java:363)
-	at org.eclipse.jdt.internal.junit4.runner.JUnit4TestReference.run(JUnit4TestReference.java:86)
-	at org.eclipse.jdt.internal.junit.runner.TestExecution.run(TestExecution.java:38)
-	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.runTests(RemoteTestRunner.java:459)
-	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.runTests(RemoteTestRunner.java:678)
-	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.run(RemoteTestRunner.java:382)
-	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.main(RemoteTestRunner.java:192)
+	at org.apache.maven.surefire.junit4.JUnit4Provider.execute(JUnit4Provider.java:252)
+	at org.apache.maven.surefire.junit4.JUnit4Provider.executeTestSet(JUnit4Provider.java:141)
+	at org.apache.maven.surefire.junit4.JUnit4Provider.invoke(JUnit4Provider.java:112)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:483)
+	at org.apache.maven.surefire.util.ReflectionUtils.invokeMethodWithArray(ReflectionUtils.java:189)
+	at org.apache.maven.surefire.booter.ProviderFactory$ProviderProxy.invoke(ProviderFactory.java:165)
+	at org.apache.maven.surefire.booter.ProviderFactory.invokeProvider(ProviderFactory.java:85)
+	at org.apache.maven.surefire.booter.ForkedBooter.runSuitesInProcess(ForkedBooter.java:115)
+	at org.apache.maven.surefire.booter.ForkedBooter.main(ForkedBooter.java:75)
